@@ -6,3 +6,7 @@
 
 // The Subversion Date string of the ChangeLog.
 #define PACKAGE_DATE "@DATE@"
+
+// Version and revision together
+#define PACKAGE_VERSION_REV \
+  "version " PACKAGE_VERSION " rev. " PACKAGE_REVISION
